src/objects/ADvendio__Campaign_Item__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__InvoiceQuantityManual__c</fullName>
        <label>Invoice Quantity (manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__IsCPMPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox defines if the amount needs to be divided by 1000 for CPM Items in Billing &amp; Accounting.</description>
        <inlineHelpText>This checkbox defines if the amount needs to be divided by 1000 for CPM Items in Billing &amp; Accounting.</inlineHelpText>
        <label>Is CPM Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__IsRecommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__LastAvailabilityForecast__c</fullName>
        <description>Last Availability Forecast run</description>
        <label>Last Availability Forecast</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADvendio__LastBookingProcess__c</fullName>
        <description>Last Booking run</description>
        <label>Last Booking Process</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADvendio__LastExclusivityCheck__c</fullName>
        <description>Indicates the last time exclusivity has been checked for this line item.</description>
        <inlineHelpText>Indicates the last time exclusivity has been checked for this line item.</inlineHelpText>
        <label>Last Exclusivity Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADvendio__LastManualDeliveryDataUpdate__c</fullName>
        <label>Last Manual Delivery Data Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADvendio__Last_Deliverystats_Update__c</fullName>
        <description>The ad server interface will enter the current date during a delivery data import.</description>
        <inlineHelpText>The ad server interface will enter the current date during a delivery stats import.</inlineHelpText>
        <label>Last Delivery Data Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADvendio__LineDescription__c</fullName>
        <description>This Field is used on Quote PDF and also submitted to the AdServer when this Campaign Item is relevant for an AdServer.</description>
        <inlineHelpText>Enter a comment to this position which will be shown on the proposal.</inlineHelpText>
        <label>Line Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Line_Description__c</fullName>
        <description>This field is deprecated.</description>
        <inlineHelpText>Enter a comment to this position which will be shown on the proposal.</inlineHelpText>
        <label>Line Description (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__LinearDistribution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linear Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__List_Price__c</fullName>
        <description>The formula displays the list price for this advertising type as defined by the product management.</description>
        <formula>ADvendio__Ad_Price__r.ADvendio__List_price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The formula displays the list price for this advertising type as defined by the product management.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__ManualDateRange__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the From and Until dates of a Campaign Item are not derived from the Publication Dates.</inlineHelpText>
        <label>Manual Date Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__MatchedImpressionsPlanned__c</fullName>
        <description>The ad server gateway enters the number of matched impressions for a future Campaign Item during an availability forecast.</description>
        <inlineHelpText>The ad server gateway enters the number of matched impressions for a future Campaign Item during an availability forecast.</inlineHelpText>
        <label>Matched Impressions (planned)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__MatchedImpressionsRunning__c</fullName>
        <description>The ad server gateway enters the number of matched impressions for a running Campaign Item during an availability forecast.</description>
        <inlineHelpText>The ad server gateway enters the number of matched impressions for a running Campaign Item during an availability forecast.</inlineHelpText>
        <label>Matched Impressions (running)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Media_Campaign__c</fullName>
        <description>This reference names the appendant media campaign.</description>
        <inlineHelpText>This reference names the appendant media campaign.</inlineHelpText>
        <label>Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipLabel>Campaign Items</relationshipLabel>
        <relationshipName>Advertising_Media</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__NotRelevantForTurnover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox controls if the amount is summed up to the related account or not.</description>
        <inlineHelpText>This checkbox controls if the amount is summed up to the related account or not.</inlineHelpText>
        <label>Not Relevant For Turnover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__NumberOfColumns__c</fullName>
        <description>Defines how many columns the ad will use. This value is used for the Rate Step - Price Calculation (Height x Number Of Columns = Rate Calculation Quantity).</description>
        <inlineHelpText>Defines how many columns the ad will use.</inlineHelpText>
        <label>Number Of Columns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__OSI__c</fullName>
        <description>This reference names the appendant media campaign.</description>
        <inlineHelpText>This reference names the appendant media campaign.</inlineHelpText>
        <label>OSI</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__OVKBillingCategory__c</fullName>
        <description>Field used for AGOF Interface - Sets the OVK Billing category to fixed price or allin based on the Advendio billing category.</description>
        <formula>CASE (TEXT(ADvendio__Billing_category__c),
  &quot;Fixed Price&quot;, &quot;allin&quot;,
  &quot;vCPM&quot;, &quot;CPM&quot;,
  TEXT(ADvendio__Billing_category__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sets the OVK Billing category to fixed price or allin based on the Advendio billing category.</inlineHelpText>
        <label>OVK Billing Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__OptimizationExclusion__c</fullName>
        <description>Reason why this Campaign Item must not be optimized. Optimization is possible if this field is null, otherwise the reason is displayed.</description>
        <inlineHelpText>Reason why this Campaign Item must not be optimized. Leave blank to allow optimization.</inlineHelpText>
        <label>Optimization Exclusion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Package__c</fullName>
        <description>With this select list, you can combine any number of campaign items in packages. Packages will also be displayed on the proposal.</description>
        <inlineHelpText>With this select list, you can combine any number of campaign items in packages. Packages will also be displayed on the proposal.</inlineHelpText>
        <label>Package</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package 2</fullName>
                </value>
                <value>
                    <fullName>Package 3</fullName>
                </value>
                <value>
                    <fullName>Package 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__PacketItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packet Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Packet Components</relationshipLabel>
        <relationshipName>PacketComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentType__c</fullName>
        <description>Please choose the relevant value for this Campaign Item. This field is used for reporting and interfaces to Flat Planning tools (e.g. JournalDesigner).</description>
        <inlineHelpText>Please choose the relevant value for this Campaign Item. This field is used for reporting and interfaces to Flat Planning tools (e.g. JournalDesigner).</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Barter</fullName>
                </value>
                <value>
                    <fullName>InHouse</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Rebate in Kind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__PerformanceIndicator__c</fullName>
        <description>This field shows the current delivery status as a percentage.</description>
        <formula>CASE ( /* Billing Category */
	1,
	IF ( /* use AI */
		TEXT(ADvendio__Billing_category__c) == &quot;CPM&quot; ||
		TEXT(ADvendio__Billing_category__c) == &quot;CPD&quot; ||
		TEXT(ADvendio__Billing_category__c) == &quot;CPW&quot; ||
		TEXT(ADvendio__Billing_category__c) == &quot;CPMo&quot; ||
		TEXT(ADvendio__Billing_category__c) == &quot;Fixed Price&quot;,
		1,
		0
	),

	CASE ( /* Runtime */
 		1,
		IF ( /* running... */
			ADvendio__from_Date__c &lt; TODAY() &amp;&amp;
			ADvendio__until_Date__c &gt;= TODAY() &amp;&amp;
			ADvendio__Delivered_Impressions__c &gt; 0,
			1,
			0
		),
		BLANKVALUE(ADvendio__Delivered_Impressions__c, 0) +
		(
			(
				BLANKVALUE(ADvendio__Delivered_Impressions__c, 0) /
				MAX(TODAY() - ADvendio__from_Date__c,1) *
				(ADvendio__until_Date__c - TODAY() +1)
			)
		),

		IF( /* ended... */
			ADvendio__until_Date__c &lt; TODAY() &amp;&amp;
			ADvendio__Delivered_Impressions__c &gt; 0,
			1,
			0
		),
		BLANKVALUE(ADvendio__Delivered_Impressions__c, 0),

		0
	),

	IF ( /* use clicks */
		TEXT(ADvendio__Billing_category__c) == &quot;CPC&quot;,
		1,
		0
	),

	CASE ( /* Runtime */
 		1,
		IF ( /* running... */
			ADvendio__from_Date__c &lt; TODAY() &amp;&amp;
			ADvendio__until_Date__c &gt;= TODAY() &amp;&amp;
			ADvendio__Delivered_Clicks__c &gt; 0,
			1,
			0
		),
		BLANKVALUE(ADvendio__Delivered_Clicks__c, 0) +
		(
			(
				BLANKVALUE(ADvendio__Delivered_Clicks__c, 0) /
				MAX(TODAY() - ADvendio__from_Date__c,1) *
				(ADvendio__until_Date__c - TODAY() +1)
			)
		),

		IF( /* ended... */
			ADvendio__until_Date__c &lt; TODAY() &amp;&amp;
			ADvendio__Delivered_Clicks__c &gt; 0,
			1,
			0
		),
		BLANKVALUE(ADvendio__Delivered_Clicks__c, 0),
		
		0
	),

	IF ( /* use visible AI */
		TEXT(ADvendio__Billing_category__c) == &quot;vCPM&quot;,
		1,
		0
	),

	CASE ( /* Runtime */
 		1,
		IF ( /* running... */
			ADvendio__from_Date__c &lt; TODAY() &amp;&amp;
			ADvendio__until_Date__c &gt;= TODAY() &amp;&amp;
			ADvendio__AvAsViewableAi__c &gt; 0,
			1,
			0
		),
		BLANKVALUE(ADvendio__AvAsViewableAi__c, 0) +
		(
			(
				BLANKVALUE(ADvendio__AvAsViewableAi__c, 0) /
				MAX(TODAY() - ADvendio__from_Date__c,1) *
				(ADvendio__until_Date__c - TODAY() + 1)
			)
		),

		IF( /* ended... */
			ADvendio__until_Date__c &lt; TODAY() &amp;&amp;
			ADvendio__AvAsViewableAi__c &gt; 0,
			1,
			0
		),
		BLANKVALUE(ADvendio__AvAsViewableAi__c, 0),
		0
	),
	0
) / ADvendio__BookingQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field shows the current delivery status as a percentage.</inlineHelpText>
        <label>Performance Indicator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Period__c</fullName>
        <description>This formula displays the total period of this campaign item.</description>
        <formula>TEXT(YEAR(ADvendio__from_Date__c)) &amp; &quot;-&quot; &amp; IF(MONTH(ADvendio__from_Date__c) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT(MONTH(ADvendio__from_Date__c)) &amp; &quot;-&quot; &amp; IF(DAY(ADvendio__from_Date__c) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT(DAY(ADvendio__from_Date__c)) &amp; &quot; - &quot; &amp; TEXT(YEAR(ADvendio__until_Date__c)) &amp; &quot;-&quot; &amp; IF(MONTH(ADvendio__until_Date__c) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT(MONTH(ADvendio__until_Date__c)) &amp; &quot;-&quot; &amp; IF(DAY(ADvendio__until_Date__c) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT(DAY(ADvendio__until_Date__c))</formula>
        <inlineHelpText>This formula displays the total period of this campaign item.</inlineHelpText>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionNumberAppendix__c</fullName>
        <description>Additional field to add after the position number. For example if you have the position number &apos;3&apos; you can add the appendix &apos;.2&apos; to get the joined position number &apos;3.2&apos;</description>
        <inlineHelpText>Additional field to add after the position number. For example if you have the position number &apos;3&apos; you can add the appendix &apos;.2&apos; to get the joined position number &apos;3.2&apos;</inlineHelpText>
        <label>Position Number Appendix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionNumber__c</fullName>
        <label>Position Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a CampaignItem is optimized the new optimized CampaignItem needs a reference to the original CampaignItem.</description>
        <inlineHelpText>If a CampaignItem is optimized the new optimized CampaignItem needs a reference to the original CampaignItem.</inlineHelpText>
        <label>Position Reference</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Campaign Items (Position Reference)</relationshipLabel>
        <relationshipName>ReferingPositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__PreferredPlacement__c</fullName>
        <description>Please describe the placement which is favored by the advertiser, on which page and which position in a Magazin should the ad be placed.</description>
        <inlineHelpText>Please describe the placement which is favored by the advertiser, on which page and which position in a Magazin should the ad be placed.</inlineHelpText>
        <label>Preferred Placement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Priority__c</fullName>
        <description>Every AdServer has different available values for priority</description>
        <inlineHelpText>Set the priority submitted to the AdServer.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>Accelerated</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Exclu without Capping</fullName>
                </value>
                <value>
                    <fullName>Exclu 2</fullName>
                </value>
                <value>
                    <fullName>Exclu 3</fullName>
                </value>
                <value>
                    <fullName>Exclu 4</fullName>
                </value>
                <value>
                    <fullName>High 1</fullName>
                </value>
                <value>
                    <fullName>High 2</fullName>
                </value>
                <value>
                    <fullName>High 3</fullName>
                </value>
                <value>
                    <fullName>High 4</fullName>
                </value>
                <value>
                    <fullName>Normal 1</fullName>
                </value>
                <value>
                    <fullName>Normal 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Prorated__c</fullName>
        <label>Prorated</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Quantity_Discount_custom__c</fullName>
        <description>You have the option to change the quantity discount for this campaign item only. To do that, enter a new percentage value.</description>
        <inlineHelpText>You have the option to change the quantity discount for this campaign item only. To do that, enter a new percentage value.</inlineHelpText>
        <label>Quantity Discount custom</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Quantity__c</fullName>
        <description>Enter an amount, dependent on billing category. CPM = impressions, CPC = clicks, CPD = amount of days, etc.</description>
        <inlineHelpText>Enter an amount, dependent on billing category. CPM = impressions, CPC = clicks, CPD = amount of days, etc.</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Query_Inventory__c</fullName>
        <defaultValue>true</defaultValue>
        <description>With this checkbox, you can regulate whether an inventory query shall be possible for this campaign item.</description>
        <inlineHelpText>With this checkbox, you can regulate whether an inventory query shall be possible for this campaign item.</inlineHelpText>
        <label>Query Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateCalculationQuantity__c</fullName>
        <description>This quantity is used to get the correct rate of the pre defined rate steps.</description>
        <inlineHelpText>This quantity is used to get the correct rate of the pre defined rate steps.</inlineHelpText>
        <label>Rate Calculation Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount2Name__c</fullName>
        <label>Customer Discount (Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Rate_Discount_1__c</fullName>
        <description>This formula displays the quantity discount as defined in the media campaign.</description>
        <formula>IF( ISNULL(ADvendio__Quantity_Discount_custom__c), ADvendio__Media_Campaign__r.ADvendio__Rate_Discount_1__c, ADvendio__Quantity_Discount_custom__c)</formula>
        <inlineHelpText>This formula displays the quantity discount as defined in the media campaign.</inlineHelpText>
        <label>Quantity Discount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Rate_Discount_2__c</fullName>
        <formula>IF(ISNULL(ADvendio__Rate_Discount_2_custom__c),ADvendio__Media_Campaign__r.ADvendio__Rate_Discount_2__c,ADvendio__Rate_Discount_2_custom__c)</formula>
        <label>Customer Discount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Rate_Discount_2_custom__c</fullName>
        <label>Customer Discount custom</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Rate_Discount_3__c</fullName>
        <formula>IF( ISNULL(ADvendio__Rate_Discount_3_custom__c), ADvendio__Media_Campaign__r.ADvendio__Rate_Discount_3__c, ADvendio__Rate_Discount_3_custom__c)</formula>
        <label>Agency Discount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Rate_Discount_3_custom__c</fullName>
        <label>Agency Discount custom</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Rate_Discount_4_Name__c</fullName>
        <description>Here you are able to add an intern description to this special discount.</description>
        <inlineHelpText>Here you are able to add an intern description to this special discount.</inlineHelpText>
        <label>Special Discount (Name)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>InPage</fullName>
                </value>
                <value>
                    <fullName>InStream</fullName>
                </value>
                <value>
                    <fullName>Kompensation</fullName>
                </value>
                <value>
                    <fullName>Nachlieferung</fullName>
                </value>
                <value>
                    <fullName>Positionsrabatt Natural</fullName>
                </value>
                <value>
                    <fullName>Storno mit Leistungsfluss</fullName>
                </value>
                <value>
                    <fullName>Storno ohne Leistungsfluss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__RebateInKindCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the Rebate in Kind condition to count the quantity as given rebate in kind.</description>
        <inlineHelpText>Enter the Commitment Condition that caused the rebate in kind for this Campaign Item</inlineHelpText>
        <label>Rebate In Kind Condition</label>
        <referenceTo>ADvendio__CommitmentCondition__c</referenceTo>
        <relationshipLabel>Campaign Items (Rebate In Kind Condition)</relationshipLabel>
        <relationshipName>Campaign_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ReservedImpressionsPlanned__c</fullName>
        <description>The ad server gateway enters the number of reserved impressions contending the planned Campaign Item during an availability forecast.</description>
        <inlineHelpText>The ad server gateway enters the number of reserved impressions contending the planned Campaign Item during an availability forecast.</inlineHelpText>
        <label>Reserved Impressions (planned)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__ReservedImpressionsRunning__c</fullName>
        <description>The ad server gateway enters the number of reserved impressions contending a running Campaign Item during an availability forecast.</description>
        <inlineHelpText>The ad server gateway enters the number of reserved impressions contending a running Campaign Item during an availability forecast.</inlineHelpText>
        <label>Reserved Impressions (running)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Sales_Price__c</fullName>
        <description>Enter the sales price for this campaign item.</description>
        <inlineHelpText>Enter the sales price for this campaign item.</inlineHelpText>
        <label>Sales Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__ScaledDiscountCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When a Campaign Item gets an scaled cash discount from a commitment, the relevant commitment condition is saved in this field.</description>
        <inlineHelpText>The Campaign Item is discounted because of this Scaled Discount Commitment Condition.</inlineHelpText>
        <label>Scaled Discount Condition</label>
        <referenceTo>ADvendio__CommitmentCondition__c</referenceTo>
        <relationshipLabel>Campaign Items</relationshipLabel>
        <relationshipName>Campaign_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__SecondaryGoalQuantity__c</fullName>
        <description>The quantity of the secondary goal for a campaign item. It defines the goal for a campaign item could be reached. Currently it will be considered only if the billing category of campaign item is vCPM while submitting to DFP.</description>
        <inlineHelpText>The quantity of the secondary goal for a campaign item. It defines the goal for a campaign item could be reached. Currently it will be considered only if the billing category of campaign item is vCPM while submitting to DFP.</inlineHelpText>
        <label>Secondary Goal Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedAdServerIdInformation__c</fullName>
        <description>This field stores a summary of the selected Targeting Criteria of the Campaign Item to display that information within reports.</description>
        <inlineHelpText>This field stores a summary of the selected Targeting Criteria of the Campaign Item to display that information within reports.</inlineHelpText>
        <label>Selected AdServer ID Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedBrandProductInformation__c</fullName>
        <description>This field stores a summary of the selected Brands / Products of the Campaign Item to display that information within reports.</description>
        <inlineHelpText>This field stores a summary of the selected Brands / Products of the Campaign Item to display that information within reports.</inlineHelpText>
        <label>Selected Brands/Products Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedCityInformation__c</fullName>
        <label>Selected City Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedContentInformation__c</fullName>
        <label>Selected Content Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedCountryInformation__c</fullName>
        <label>Selected Country Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedPublicationDateInformation__c</fullName>
        <label>Selected Publication Date Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedRegionInformation__c</fullName>
        <label>Selected Region Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Selected_Cities__c</fullName>
        <inlineHelpText>Bitte nicht mehr benutzen, wird nicht mehr unterstützt von Advendio</inlineHelpText>
        <label>Selected Cities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Selected_Countries__c</fullName>
        <inlineHelpText>Bitte nicht mehr benutzen, wird nicht mehr unterstützt von Advendio</inlineHelpText>
        <label>Selected Countries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__SetBleed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check if this Campaign item uses bleeding. (This information can be transferred to your flat planning tool.)</description>
        <inlineHelpText>Please check if this Campaign item uses bleeding. (This information can be transferred to your flat planning tool.)</inlineHelpText>
        <label>Set Bleed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Share_of_Voice__c</fullName>
        <description>Represents the percentage of times your ads were actually shown in relation to the total number of chances your ads could have been shown, based on keyword and campaign settings.</description>
        <inlineHelpText>Represents the percentage of times your ads were actually shown in relation to the total number of chances your ads could have been shown, based on keyword and campaign settings.</inlineHelpText>
        <label>Share of Voice (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Shiftable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check if you have to potentially change/shift the campaign item dates. This will be shown in the Booking Calendar.</description>
        <inlineHelpText>If you like to reserve and sell a Campaign Item but might have to change its start and end dates/publication date mark this checkbox and the Booking Calendar will inform users using the Shiftable icon.</inlineHelpText>
        <label>Shiftable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowOnInvoicePDF__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show on Invoice PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowPacketComponentsOnQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Packet Components On Quote</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>